[package]
name = "tokio-linux-aio"
version = "0.1.11"
authors = ["Gleb Pomykalov <glebpom@gmail.com", "Hans-Martin Will <hwill@acm.org>"]
description = "Tokio bindings for Linux kernel AIO"
documentation = "https://docs.rs/tokio-linux-aio/"
repository= "https://github.com/hmwill/tokio-linux-aio"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "external-ffi-bindings", "filesystem", "os::unix-apis"]
keywords = ["async", "non-blocking", "futures", "linux", "aio"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.18", features = ["io-driver", "rt-core", "sync"] }
futures = "0.3"
mio = "0.6.21"
aio-bindings = { path = "../aio-bindings", version = "0.1.2" }
libc = "0.2"
nix = "0.17.0"
parking_lot = "0.10.2"
intrusive-collections = { git = "https://github.com/Amanieu/intrusive-rs.git" }
lock_api = "0.3.4"
thiserror = "1.0.15"
memmap = "0.7.0"
region = "2.1.2"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
tempfile = "3.1.0"
